--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "connect-history-api-fallback": "^1.3.0",
         "express": "^4.15.2",
         "vue": "^2.2.2",
+        "vue-analytics": "^3.0.0",
         "vue-router": "^2.3.0"
     },
     "devDependencies": {
