--- a/package.json
+++ b/package.json
@@ -5,32 +5,48 @@
     "author": "Brian Whicheloe",
     "license": "MIT",
     "scripts": {
-        "pack": "webpack --watch",
-        "pack-production": "NODE_ENV=production webpack",
-        "start": "node app.js"
+        "dev": "NODE_ENV=development node server/serve.js",
+        "production": "NODE_ENV=production node server/serve.js",
+        "pack-production": "run-p pack-client-production pack-server-production",
+        "pack-client-production": "NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+        "pack-server-production": "NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+        "clean": "rm dist/*"
     },
     "dependencies": {
+        "@babel/core": "^7.1.6",
+        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/preset-env": "^7.1.6",
+        "autoprefixer": "^9.3.1",
+        "babel-loader": "^8.0.4",
+        "babel-minify-webpack-plugin": "^0.3.1",
+        "brotli-webpack-plugin": "^1.0.0",
+        "compression-webpack-plugin": "^2.0.0",
         "connect-history-api-fallback": "^1.3.0",
+        "css-loader": "^1.0.1",
         "express": "^4.15.2",
-        "vue": "^2.2.2",
-        "vue-analytics": "^3.0.0",
-        "vue-router": "^2.3.0"
-    },
-    "devDependencies": {
-        "autoprefixer": "^6.7.7",
-        "babel-core": "^6.23.1",
-        "babel-loader": "^6.4.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-stage-3": "^6.22.0",
-        "css-loader": "^0.27.1",
-        "file-loader": "^0.10.1",
-        "node-sass": "^4.5.0",
-        "sass-loader": "^6.0.3",
-        "style-loader": "^0.13.2",
-        "url-loader": "^0.5.8",
-        "vue-loader": "^11.1.4",
-        "vue-template-compiler": "^2.2.2",
-        "webpack": "^2.2.1"
+        "express-static-gzip": "^1.1.3",
+        "file-loader": "^2.0.0",
+        "helmet": "^3.15.0",
+        "html-webpack-plugin": "^3.2.0",
+        "less": "^3.8.1",
+        "less-loader": "^4.1.0",
+        "npm-run-all": "^4.1.3",
+        "postcss-loader": "^3.0.0",
+        "style-loader": "^0.23.1",
+        "sw-precache-webpack-plugin": "^0.11.5",
+        "url-loader": "^1.1.2",
+        "vue": "^2.5.17",
+        "vue-analytics": "^5.16.0",
+        "vue-loader": "^15.4.2",
+        "vue-router": "^3.0.1",
+        "vue-server-renderer": "^2.5.17",
+        "vue-template-compiler": "^2.5.17",
+        "vuex": "^3.0.1",
+        "webpack": "^4.25.1",
+        "webpack-build-notifier": "^0.1.30",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-middleware": "^3.4.0",
+        "webpack-hot-middleware": "^2.24.3",
+        "webpack-visualizer-plugin": "^0.1.11"
     }
 }
