--- a/package.json
+++ b/package.json
@@ -17,32 +17,31 @@
         "@babel/plugin-syntax-dynamic-import": "^7.0.0",
         "@babel/preset-env": "^7.1.6",
         "autoprefixer": "^9.3.1",
-        "babel-loader": "^8.0.4",
+        "babel-loader": "^8.0.2",
         "babel-minify-webpack-plugin": "^0.3.1",
         "brotli-webpack-plugin": "^1.0.0",
         "compression-webpack-plugin": "^2.0.0",
-        "connect-history-api-fallback": "^1.3.0",
         "css-loader": "^1.0.1",
-        "express": "^4.15.2",
+        "express": "^4.16.4",
         "express-static-gzip": "^1.1.3",
         "file-loader": "^2.0.0",
         "helmet": "^3.15.0",
         "html-webpack-plugin": "^3.2.0",
-        "less": "^3.8.1",
+        "iltorb": "^2.4.1",
+        "less": "^3.9.0",
         "less-loader": "^4.1.0",
-        "npm-run-all": "^4.1.3",
+        "npm-run-all": "^4.1.5",
         "postcss-loader": "^3.0.0",
-        "style-loader": "^0.23.1",
         "sw-precache-webpack-plugin": "^0.11.5",
-        "url-loader": "^1.1.2",
         "vue": "^2.5.17",
-        "vue-analytics": "^5.16.0",
+        "vue-analytics": "^5.16.1",
         "vue-loader": "^15.4.2",
-        "vue-router": "^3.0.1",
+        "vue-router": "^3.0.2",
         "vue-server-renderer": "^2.5.17",
+        "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.5.17",
         "vuex": "^3.0.1",
-        "webpack": "^4.25.1",
+        "webpack": "^4.26.1",
         "webpack-build-notifier": "^0.1.30",
         "webpack-cli": "^3.1.2",
         "webpack-dev-middleware": "^3.4.0",
