--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devDependencies": {
         "eslint": "^8.25.0",
         "eslint-config-brian": "^1.0.13",
+        "eslint-plugin-svelte3": "^4.0.0",
         "less": "^4.1.3",
         "svelte-preprocess": "^4.10.7"
     }
