--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
         "preview": "vite preview",
         "lint": "eslint ."
     },
-    "dependencies": {
-        "@sveltejs/vite-plugin-svelte": "^1.0.2",
-        "svelte": "^3.49.0",
-        "vite": "^3.1.0"
-    },
     "devDependencies": {
-        "eslint": "^8.25.0",
-        "eslint-config-brian": "^1.0.13",
+        "@sveltejs/vite-plugin-svelte": "^2.0.4",
+        "eslint": "^8.38.0",
+        "eslint-config-brian": "^1.0.19",
         "eslint-plugin-svelte3": "^4.0.0",
         "less": "^4.1.3",
-        "svelte-preprocess": "^4.10.7"
+        "svelte": "^3.58.0",
+        "svelte-preprocess": "^5.0.3",
+        "vite": "^4.2.1"
     }
 }
