--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "whicheloe.us",
     "private": true,
-    "version": "2.0.0",
+    "version": "2.0.1",
     "author": "Brian Whicheloe",
     "type": "module",
     "scripts": {
@@ -11,13 +11,16 @@
         "lint": "eslint ."
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^2.0.4",
-        "eslint": "^8.38.0",
-        "eslint-config-brian": "^1.0.19",
-        "eslint-plugin-svelte3": "^4.0.0",
+        "@sveltejs/vite-plugin-svelte": "^2.4.1",
+        "eslint": "^8.42.0",
+        "eslint-config-brian": "^1.0.22",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-svelte": "^2.30.0",
         "less": "^4.1.3",
-        "svelte": "^3.58.0",
-        "svelte-preprocess": "^5.0.3",
-        "vite": "^4.2.1"
+        "prettier": "^2.8.8",
+        "prettier-plugin-svelte": "^2.10.1",
+        "svelte": "^3.59.1",
+        "svelte-preprocess": "^5.0.4",
+        "vite": "^4.3.9"
     }
 }
