--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,29 +6,36 @@
     "display": "standalone",
     "background_color": "#4e4e4e",
     "theme_color": "#4e4e4e",
-    "icons": [{
-        "src": "icons/w_48.png",
-        "sizes": "48x48",
-        "type": "image/png"
-    }, {
-        "src": "icons/w_72.png",
-        "sizes": "72x72",
-        "type": "image/png"
-    }, {
-        "src": "icons/w_96.png",
-        "sizes": "96x96",
-        "type": "image/png"
-    }, {
-        "src": "icons/w_144.png",
-        "sizes": "144x144",
-        "type": "image/png"
-    }, {
-        "src": "icons/w_168.png",
-        "sizes": "168x168",
-        "type": "image/png"
-    }, {
-        "src": "icons/w_192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-    }]
+    "icons": [
+        {
+            "src": "icons/w_48.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/w_72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/w_96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/w_144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/w_168.png",
+            "sizes": "168x168",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/w_192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        }
+    ]
 }
